<resources>
    <string name="shr_app_name">Task</string>
    <string name="shr_name">Signup for an Account</string>
    <string name="shr_hint_username">Enter username</string>
    <string name="shr_hint_password">Enter a downpayment amount</string>
    <string name="shr_button_next">SIGNUP</string>
    <string name="shr_button_back">LOGOUT</string>
    <string name="shr_button_cancel">results go here</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="tit_title">Hello.</string>
    <string name="shr_product_description">Your Account</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Hello Shivam, here\'s your account info.</string>
    <string name="shr_apartment_label">Google Pixel 5 in Sorta Sage</string>
    <string name="shr_accessories_label">Total Cost: $799</string>
    <string name="shr_shoes_label">Based on a downpayment of $300</string>
    <string name="shr_tops_label">Your monthly payment is: $41.58</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="spinner_title">AndroidSpinnerExample</string>
    <string-array name="planets_array">
        <item>Select a phone</item>
        <item>Google Pixel 5</item>
        <item>Google Pixel 4</item>
    </string-array>
    <string-array name="planets_array1">
        <item>Select a color</item>
        <item>Sorta Sage</item>
        <item>Black</item>
    </string-array>
</resources>
